# virtmon

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
harvest/: Cargo.toml  build.rs
harvest/src/: cpu.rs  lib.rs  process.rs  system.rs
harvest/src/net/: client.rs
proto/: healthcheck.proto
satellite/: Cargo.toml
satellite/src/: main.rs
src/: main.rs  ui.rs
src/harvest/: cpu.rs  mod.rs  process.rs
src/net/: client.rs
src/util/: event.rs
