[package]
name = "virtmon"
version = "0.1.0"
authors = ["jd84 <jd84@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.14.5"
tui = { version = "0.9.5", default-features = false, features = ["crossterm"] }
crossterm = "0.17.5"
backtrace = "0.3.48"
slab = "0.4.2"

[target.'cfg(windows)'.dependencies]
netmon-rust = { version = "0.1.0", git = "https://github.com/jd84/netmon-rust.git" }

[profile.release]
debug = true
