[package]
name = "satellite"
version = "0.1.0"
authors = ["jd84 <jd84@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
harvest = { version = "0.1.0", path = "../harvest" }
sysinfo = "0.14.5"
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.2"
